--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>My First Git Title</title>
 </head>
 
 <body>
-
+    <h1>New Heading</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ullam quidem earum accusamus repellendus cum
+        architecto officiis libero distinctio unde, et ducimus. Dolor incidunt quae perspiciatis perferendis voluptas
+        tempora ad tenetur impedit voluptate nesciunt? Earum ducimus obcaecati ut beatae sit quos facilis iusto aperiam?
+        Dolorem natus temporibus ipsam quas iusto.
+    </p>
 </body>
 
 </html>
