--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         tempora ad tenetur impedit voluptate nesciunt? Earum ducimus obcaecati ut beatae sit quos facilis iusto aperiam?
         Dolorem natus temporibus ipsam quas iusto.
     </p>
+    <section>
+        <p>git is fun</p>
+    </section>
 </body>
 
 </html>
